@@ -4,6 +4,7 @@
 	parmaters.
 	* Copyright: Removed fuzziness around trailing '+' in licence names
 	* AnyThing.pm: grab() : accept '+' without surrounding quotes in argument
+	* WarpedNode: deletages copy_from and dump_tree to Node (fixes hash copy with warped nodes)
 
 2010-10-26 Dominique Dumont  <domi.dumont@free.fr> 1.217
 
